<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">e驾学车</string>
    <string name="commit">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="judge_all">总体评价</string>
    <string name="defualt_null">缺失</string>
    <string name="hello_world">Hello world!</string>

    <!-- 需求主页面 -->
    <string name="demand_bottom_tv">你的学车需求</string>
    <string name="demand_bottom_sound">说出学车需求</string>

    <!-- 首页 -->
    <string name="main_tab_demand">我的需求</string>
    <string name="main_tab_appointment">预约管理</string>
    <string name="main_tab_center">个人中心</string>

    <!-- 侧边栏 -->
    <string name="menu_title">学车指南</string>
    <string name="menu_info">考项说明</string>
    <string name="menu_pro">报名流程</string>
    <string name="menu_hospital">体检医院</string>
    <string name="menu_charge_standard">收费标准</string>
    <string name="title_activity_demand">DemandActivity</string>

    <!-- 预约相关 -->
    <string name="apoint_title">预约学车</string>
    <string name="appointment_nocoach">亲，如果您没有找到合适的教练，您可以点击“发布需求”帮你找到服务好，教学质量高的教练。   如果您已经有报名教练，请点击以下按钮，方便你快捷的使用“预约练车”功能。</string>
    <string name="appointment_bindcoach">绑定教练</string>
    <!-- 验证相关 -->
    <string name="str_verify_phone_title">验证手机</string>
    <string name="str_verify_phone_purpose">为了方便教练联系您，请验证手机</string>
    <string name="str_verify_phone_btn_verify">验证</string>
    <string name="str_verify_phone_countdown">%1$dS</string>
    <string name="str_verify_phone_btn_start">开始</string>
    <string name="str_verify_phone_hint_phonenum">手机号</string>
    <string name="str_verify_phone_hint_verifycode">验证码</string>
    <string name="str_verify_phone_protocal_prefix">点击开始，即表示同意</string>
    <string name="str_verify_phone_protocal_name">《e驾学车用户协议》</string>
    <string name="str_verify_phone_err_not_valid_number">请输入合适的手机号!</string>
    <string name="str_verify_phone_err_request_retry">重发</string>

    <!-- 服务协议 -->
    <string name="service_info_se">服务条款</string>
    <string name="service_info_pri">隐私政策</string>

    <!-- 发布需求界面 -->
    <string name="post_title">学车需求</string>
    <string name="post_defualt_tv">师傅，我要学车，我需要</string>
    <string name="post_submmit">确认发送</string>
    <string name="post_addr_tip">亲~你可点击定位你当下的地址，也可填写你的常用地址，便于我们为你找到距离近的教练</string>
    <string name="post_dialog_edit_hint">设置常用地址</string>
    <string name="post_sound_btn">亲~按着就说吧</string>
    <string name="post_sound_btn_press">松开停止录音</string>
    <string name="post_tip_fail">您的学车需求无教练抢单，现已超时，请重新做出选择</string>
    <string name="post_repost">重新发送</string>
    <string name="post_cancel">关闭订单</string>
    <string name="post_tip_success">该教练已在积极的联系你，请注意接听您的电话</string>
    <string name="success_coach_info">已抢单成功教练信息</string>
    <!-- 绑定教练 -->
    <string name="bind_coach">绑定教练</string>
    <string name="bind_coach_tel">教练电话</string>
    <string name="bind_coach_stuname">学员姓名</string>
    <string name="bind_coach_stupass">设置密码</string>
    <string name="bind_coach_telpre">+86</string>
    <string name="bind_coach_edithint_tel">请输入教练手机号码</string>
    <string name="bind_coach_edithint_stuname">请输入你的真实姓名，方便教练核实</string>
    <string name="bind_coach_confirmpass">确认密码</string>
    <string name="bind_coach_note_tel">亲，请你填写正确的电话号码，加以绑定，方便你在线预约练车</string>
    <string name="bind_coach_note_pass">设置密码，确保能够成功的进行在线约课和不易丢失个人信息</string>
    <string name="bind_coach_condition">附加条件</string>

    <!-- 查看教练详情 -->
    <string name="coach_detail_demandnum">抢单数量</string>
    <string name="coach_detail_judgenum">好评率</string>
    <string name="coach_detail_scorenum">教练排名</string>
    <string name="coach_detail_stunum">学员数量</string>
    <string name="coach_detail_trainfield">所在训练场位置</string>
    <string name="coach_detail_trainfieldimg">训练场图片</string>
    <string name="coach_detail">教练详情</string>
    <string name="coach_detail_juege">学员评价</string>
    <string name="coach_detail_setmeal">学车套餐</string>
    <string name="coach_detail_call">呼叫师傅</string>

    <!-- 个人中心 -->
    <string name="center">个人中心</string>
    <string name="f_center_demand">需求订单</string>
    <string name="f_center_message">消息通知</string>
    <string name="f_center_coach">绑定教练</string>
    <string name="f_center_share">分享</string>
    <string name="f_center_setting">设置</string>
    <string name="modify_title">个人信息</string>
    <string name="modify_photo">头像</string>
    <string name="modify_nickname">我的昵称</string>
    <string name="modify_realname">我的真实姓名</string>
    <string name="modify_myphone">我的手机号</string>
    <string name="modify_myaddr">我的常用地址</string>
    <string name="modify_se_nichname_tip">请输入您的昵称</string>
    <string name="modify_se_addr_tip">如果您在常用地点，点击一下即可定位</string>
    <string name="str_register_photo_select_source">选择照片来源</string>
    <string name="order_complain">投诉</string>
    <string name="order_cancel">取消订单</string>
    <string name="order_content">订单内容</string>
    <string name="order_coach">抢单教练信息</string>
    <string name="order_judge">我对教练的评价</string>
    <string name="order_nextjudge">追加评价</string>
    <string name="judge">评价</string>
    <string name="judge_hint">仅限150字</string>
    <string name="judge_attitude">态度</string>
    <string name="judge_field">场地</string>
    <string name="judge_traffic">交通</string>
    <string name="version">版本号：</string>

    <!-- 设置界面 -->
    <string name="setting_softupdate">软件更新</string>
    <string name="setting_opinion">意见反馈</string>
    <string name="setting_obout">关于e驾</string>
    <string name="setting_contact">联系我们：4000-838-760</string>
    <string name="setting_logout">退出登录</string>

    <!-- 照片来源选择 -->
    <string-array name="str_register_photo_source">
        <item>拍照</item>
        <item>从相册选择</item>
    </string-array>

    <string name="str_register_photo_alreay_added">已有照片</string>
    <!-- 已有照片的操作 -->
    <string-array name="str_register_photo_operations">
        <item>查看大图</item>
        <item>删除并重传</item>
    </string-array>

    <string name="title_activity_coach">CoachActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_coach_train_field">CoachTrainFieldActivity</string>
    <string name="title_activity_appointment">AppointmentActivity</string>
    <string name="title_activity_coach_judge_list">CoachJudgeListActivity</string>
    <string name="title_activity_bind_coach">BindCoachActivity</string>
    <string name="title_activity_bind_coach_write">BindCoachWriteActivity</string>
    <string name="title_activity_fail_dialog">FailDialogActivity</string>
    <string name="title_activity_success_dialog">SuccessDialogActivity</string>
    <string name="title_activity_modify_user_info">ModifyUserInfoActivity</string>
    <string name="title_activity_msg">MsgActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_modify_user_info_secend">ModifyUserInfoSecendActivity</string>
    <string name="str_checkupdate_update_avaliable">应用有更新，是否现在更新？</string>
    <string name="str_checkupdate_update_unavaliable">应用已是最新版本</string>
    <!-- 参数说明：参数1=版本号，字符串；参数2=更新说明 -->
    <string name="str_checkupdate_update_description">新版本：%1$s\n更新说明：%2$s</string>
    <string name="str_checkupdate_update_now">立即更新</string>
    <string name="str_checkupdate_update_later">暂不更新</string>
    <string name="title_activity_msg_list">MsgListActivity</string>
    <string name="title_activity_order_detail">OrderDetailActivity</string>
    <string name="str_splash_downloading">正在努力下载安装包……</string>
    <string name="str_splash_download_fail">安装包下载失败，请检查网络</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_judge">JudgeActivity</string>
    <string name="title_activity_complain">ComplainActivity</string>
    <string name="title_activity_opinion">OpinionActivity</string>
    <string name="title_activity_version">VersionActivity</string>

    <!-- 加载相关 -->
    <string name="ly_loading">努力加载中&#8230;</string>
    <string name="ly_loading_fail">加载失败</string>
    <string name="ly_reloading">点击重试</string>

    <!-- 解绑页面 -->
    <string name="unbind_note">亲~告诉教练你解绑的理由吧</string>
    <string name="title_activity_un_bind_coach">UnBindCoachActivity</string>
    <string name="title_activity_msg_detail">MsgDetailActivity</string>

</resources>
